Wire up a first pass at a Blog UI
- Upgrades Bootstrap to v 4.3.1
- Lots of auto formatting adjustments from Elixir

--- a/web/static/css/app.scss
+++ b/web/static/css/app.scss
@@ -161,6 +161,12 @@ article.preview, article.show, main {
   }
 }
 
+.blog-articles {
+  article.preview {
+    @include divider;
+  }
+}
+
 .published {
   font-size: smaller;
   margin-top: 40px;
