--- a/web/templates/article/edit.html.eex
+++ b/web/templates/article/edit.html.eex
@@ -1,4 +1,5 @@
 <%= render "form.html", changeset: @changeset,
+                        sections: @sections,
                         tags: @tags,
                         tech_tags: @tech_tags,
                         action: article_path(@conn, :update, @article) %>
