--- a/web/templates/article/new.html.eex
+++ b/web/templates/article/new.html.eex
@@ -1,6 +1,7 @@
 <h2>New article</h2>
 
 <%= render "form.html", changeset: @changeset,
+                        sections: @sections,
                         tags: @tags,
                         tech_tags: @tech_tags,
                         action: article_path(@conn, :create) %>
