Blog articles can have categories

--- a/web/templates/article/form.html.eex
+++ b/web/templates/article/form.html.eex
@@ -24,6 +24,12 @@
   </div>
 
   <div class="form-group">
+    <%= label f, :category_id, class: "control-label" %>
+    <%= select f, :category_id, @categories %>
+    <%= error_tag f, :category_id %>
+  </div>
+
+  <div class="form-group">
     <%= label f, :content, class: "control-label" %>
     <%= textarea f, :content, class: "form-control" %>
     <%= error_tag f, :content %>
