--- a/web/templates/article/new.html.eex
+++ b/web/templates/article/new.html.eex
@@ -2,6 +2,7 @@
 
 <%= render "form.html", changeset: @changeset,
                         sections: @sections,
+                        categories: @categories,
                         tags: @tags,
                         tech_tags: @tech_tags,
                         action: article_path(@conn, :create) %>
