Upgrade Phoenix to 1.4 (save point, new routes)

--- a/lib/cenatus_ltd_web/templates/article/edit.html.eex
+++ b/lib/cenatus_ltd_web/templates/article/edit.html.eex
@@ -3,6 +3,6 @@
                         categories: @categories,
                         tags: @tags,
                         tech_tags: @tech_tags,
-                        action: article_path(@conn, :update, @article) %>
+                        action: Routes.article_path(@conn, :update, @article) %>
 
-<%= link "Back", to: article_path(@conn, :index) %>
+<%= link "Back", to: Routes.article_path(@conn, :index) %>
