--- a/lib/cenatus_ltd_web/templates/article/index.html.eex
+++ b/lib/cenatus_ltd_web/templates/article/index.html.eex
@@ -20,9 +20,9 @@
           <span class="bold"><%= formatted(article.published_at) %></span>
       </td>
       <td class="actions text-right" colspan="1">
-        <%= link "Show", to: article_path(@conn, :show, article), class: "btn btn-default btn-xs" %>
-        <%= link "Edit", to: article_path(@conn, :edit, article), class: "btn btn-default btn-xs" %>
-        <%= link "Delete", to: article_path(@conn, :delete, article), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %>
+        <%= link "Show", to: Routes.article_path(@conn, :show, article), class: "btn btn-default btn-xs" %>
+        <%= link "Edit", to: Routes.article_path(@conn, :edit, article), class: "btn btn-default btn-xs" %>
+        <%= link "Delete", to: Routes.article_path(@conn, :delete, article), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %>
       </td>
     </tr>
     <tr class="body">
@@ -43,4 +43,4 @@
   </tbody>
 </table>
 
-<%= link "New article", to: article_path(@conn, :new) %>
+<%= link "New article", to: Routes.article_path(@conn, :new) %>
