--- a/lib/cenatus_ltd_web/templates/article/show.html.haml
+++ b/lib/cenatus_ltd_web/templates/article/show.html.haml
@@ -8,7 +8,7 @@
       %ul
         - for related <- @related do
           %li
-            %a{href='#{article_path(@conn, :show, related)}'}
+            %a{href='#{Routes.article_path(@conn, :show, related)}'}
               = related.title
 
 .row
@@ -17,7 +17,7 @@
       %h3.lp
         = @article.title
         - if @current_user do
-          %a.smaller{href= '#{article_path(@conn, :edit, @article)}'}
+          %a.smaller{href= '#{Routes.article_path(@conn, :edit, @article)}'}
             [edit]
 
       .content.lp= @article.content |> as_html
