--- a/lib/cenatus_ltd_web/templates/category/new.html.eex
+++ b/lib/cenatus_ltd_web/templates/category/new.html.eex
@@ -1,6 +1,6 @@
 <h2>New category</h2>
 
 <%= render "form.html", changeset: @changeset,
-                        action: category_path(@conn, :create) %>
+                        action: Routes.category_path(@conn, :create) %>
 
-<%= link "Back", to: category_path(@conn, :index) %>
+<%= link "Back", to: Routes.category_path(@conn, :index) %>
