--- a/lib/cenatus_ltd_web/templates/section/edit.html.eex
+++ b/lib/cenatus_ltd_web/templates/section/edit.html.eex
@@ -1,6 +1,6 @@
 <h2>Edit section</h2>
 
 <%= render "form.html", changeset: @changeset,
-                        action: section_path(@conn, :update, @section) %>
+                        action: Routes.section_path(@conn, :update, @section) %>
 
-<%= link "Back", to: section_path(@conn, :index) %>
+<%= link "Back", to: Routes.section_path(@conn, :index) %>
