--- a/lib/cenatus_ltd_web/templates/shared/blog_article_preview.html.haml
+++ b/lib/cenatus_ltd_web/templates/shared/blog_article_preview.html.haml
@@ -3,11 +3,11 @@
     %article.preview.pb-3
       .row.align-items-center
         .col-12.col-md-4.p-md-4
-          %a.link{href='#{blog_path(@conn, :show, @article)}'}
+          %a.link{href='#{Routes.blog_path(@conn, :show, @article)}'}
             %image{data-src='#{@article.image_url}' class='cld-responsive'}
         .col-12.col-md-8
           %h4.lp
-            %a.link{href='#{blog_path(@conn, :show, @article)}'}
+            %a.link{href='#{Routes.blog_path(@conn, :show, @article)}'}
               = @article.title
           .summary.lp.col= @article.summary |> as_html
             %p.published.my-0.pr-3.text-right
