--- a/lib/cenatus_ltd_web/templates/user/edit.html.eex
+++ b/lib/cenatus_ltd_web/templates/user/edit.html.eex
@@ -1,6 +1,6 @@
 <h2>Edit user</h2>
 
 <%= render "form.html", changeset: @changeset,
-                        action: user_path(@conn, :update, @user) %>
+                        action: Routes.user_path(@conn, :update, @user) %>
 
-<%= link "Back", to: user_path(@conn, :index) %>
+<%= link "Back", to: Routes.user_path(@conn, :index) %>
