--- a/lib/cenatus_ltd_web/templates/user/index.html.eex
+++ b/lib/cenatus_ltd_web/templates/user/index.html.eex
@@ -18,13 +18,13 @@
       <td><%= user.password_hash %></td>
 
       <td class="text-right">
-        <%= link "Show", to: user_path(@conn, :show, user), class: "btn btn-default btn-xs" %>
-        <%= link "Edit", to: user_path(@conn, :edit, user), class: "btn btn-default btn-xs" %>
-        <%= link "Delete", to: user_path(@conn, :delete, user), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %>
+        <%= link "Show", to: Routes.user_path(@conn, :show, user), class: "btn btn-default btn-xs" %>
+        <%= link "Edit", to: Routes.user_path(@conn, :edit, user), class: "btn btn-default btn-xs" %>
+        <%= link "Delete", to: Routes.user_path(@conn, :delete, user), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %>
       </td>
     </tr>
 <% end %>
   </tbody>
 </table>
 
-<%= link "New user", to: user_path(@conn, :new) %>
+<%= link "New user", to: Routes.user_path(@conn, :new) %>
