--- a/lib/cenatus_ltd_web/templates/user/show.html.eex
+++ b/lib/cenatus_ltd_web/templates/user/show.html.eex
@@ -19,5 +19,5 @@
 
 </ul>
 
-<%= link "Edit", to: user_path(@conn, :edit, @user) %>
-<%= link "Back", to: user_path(@conn, :index) %>
+<%= link "Edit", to: Routes.user_path(@conn, :edit, @user) %>
+<%= link "Back", to: Routes.user_path(@conn, :index) %>
