--- a/lib/cenatus_ltd_web/templates/shared/blog_article_preview.html.haml
+++ b/lib/cenatus_ltd_web/templates/shared/blog_article_preview.html.haml
@@ -2,14 +2,16 @@
   .col-md-12
     %article.preview.pb-3
       .row.align-items-center
-        .col-12.col-md-4.p-md-4
-          %a.link{href='#{Routes.blog_path(@conn, :show, @article)}'}
-            %image{data-src='#{@article.image_url}' class='cld-responsive'}
+        .col-12.col-md-4.p-md-3
+          %a.link{href: '#{Routes.blog_path(@conn, :show, @article)}'}
+            %image{data-src: '#{@article.image_url}' class: 'cld-responsive'}
         .col-12.col-md-8
           %h4.lp
-            %a.link{href='#{Routes.blog_path(@conn, :show, @article)}'}
+            %a.link{href: '#{Routes.blog_path(@conn, :show, @article)}'}
               = @article.title
-          .summary.lp.col= @article.summary |> as_html
+          .summary.lp.col
+            = @article.summary |> as_html
+            %a{href: '#{Routes.blog_path(@conn, :show, @article)}'} more >
             %p.published.my-0.pr-3.text-right
               Published on
               = @article.published_at |> formatted
