--- a/lib/cenatus_ltd_web/templates/layout/app.html.haml
+++ b/lib/cenatus_ltd_web/templates/layout/app.html.haml
@@ -17,7 +17,7 @@
 
   %body(class='#{CenatusLtdWeb.PageView.handler_info @conn}')
     .container-fluid.cenatus
-      %header.header
+      %header.header.mb-4
         .row
           .col-md-6.logo
             %a{:href => "/"}
