Ensure blog meta is below content on mobile

--- a/lib/cenatus_ltd_web/templates/shared/blog.html.haml
+++ b/lib/cenatus_ltd_web/templates/shared/blog.html.haml
@@ -5,7 +5,7 @@
     - for {article, _index} <- Enum.with_index(@articles) do
       = render "blog_article_preview.html", article: article, conn: @conn
 
-  .col-12.col-md-3.order-first.order-md-last.blog-aside
+  .col-12.col-md-3.order-md-last.blog-aside
     %aside.px-md-5
       %h4 categories
       .categories
