--- a/lib/cenatus_ltd_web/templates/blog/show.html.haml
+++ b/lib/cenatus_ltd_web/templates/blog/show.html.haml
@@ -16,31 +16,7 @@
 
 .row
   .col-md-12
-    %article.show
-      %h3.lp
-        = @article.title
-        - if @current_user do
-          %a.smaller{href= '#{Routes.article_path(@conn, :edit, @article)}'}
-            [edit]
-
-      .content.lp= @article.content |> as_html
-
-      %p.lp.nbm.tags
-        Section:
-        = @article.section.name
-      - if @article.category do
-        %p.lp.nbm.tags
-          Category:
-          = @article.category.name
-      - if length(@article.tags) > 0 do
-        %p.lp.nbm.tags
-          Filed as:
-          = CenatusLtdWeb.ArticleView.render_tags_as_links_from(@conn, @article.tags)
-      %p.lp.published
-        Published on
-        = @article.published_at |> formatted
-
-    %br
+    = render CenatusLtdWeb.SharedView, "article.html", article: @article, current_user: @current_user, conn: @conn
 
     #disqus_thread.mt-3.mb-5
 
