--- a/lib/cenatus_ltd_web/templates/page/contact.html.haml
+++ b/lib/cenatus_ltd_web/templates/page/contact.html.haml
@@ -15,3 +15,9 @@
         Drop us a mail at:
         %a{href="mailto:info@cenatus.org"}
           info@cenatus.org
+        or subscribe to sites updates &amp; blog entries via
+        %a{href="https://www.specificfeeds.com/cenatus"}
+          rss
+        or
+        %a{href="https://www.specificfeeds.com/cenatus?subParam=followPub"}
+          email.
