Upgrade to Phoenix 1.5
Tests green and server works.

- fsevents misbehaving
- Live reload too

--- a/lib/cenatus_ltd_web/templates/layout/app.html.haml
+++ b/lib/cenatus_ltd_web/templates/layout/app.html.haml
@@ -34,7 +34,7 @@
       %p.alert.alert-danger(role="alert")= get_flash(@conn, :error)
 
       %main(role="main")
-        = render @view_module, @view_template, assigns
+        = @inner_content
 
       %footer
         .row.justify-content-between
