--- a/lib/cenatus_ltd_web/templates/layout/app.html.haml
+++ b/lib/cenatus_ltd_web/templates/layout/app.html.haml
@@ -4,13 +4,21 @@
     %meta(charset="utf-8")
     %meta(http-equiv="X-UA-Compatible" content="IE=edge")
     %meta(name="viewport" content="width=device-width, initial-scale=1")
-    %meta(name="description" content="")
+    %meta(name="description" content: "#{default_description()}")
     %meta(name="author" content="")
     %meta(name="Keywords" content="Netaudio, New Music Plus, Serpentine Gallery, conference, digital, evaluation, event, festival, infrasonics, installation, interactive, internship, record label, technology, online media, people, production, sharing, sound design, web design, hackney, matt spendlove, andi studer")
-    %meta(name="Description" content="Cenatus promotes new music, develops artists and enables wider public use of new digital technologies for creativity. Cenatus works in the fields of software design and creative production including live music events, sound art installations, online media projects. Cenatus produced Netaudio London, the UK’s foremost festival dedicated to the musical sounds of the Internet which ran in 2006, 2008 and 2011. Cenatus was originally set up as a not-for-profit membership organisation in 2005 and incorporated as a community interest company in October 2009 by Matt Spendlove and Andi Studer who lead the company as directors and were supported by a network of associates. Cenatus grew into a creative technology company in 2012")
+
+    %meta{:name => "twitter:card" content: "summary"}
+    %meta{:property => "og:title" content: "#{og_title(@conn)}"}
+    %meta{:property => "og:description" content: "#{og_description(@conn)}"}
+    %meta{:property => "og:image", content: "#{og_image(@conn)}"}
+    %meta{:property => "og:url", content: "#{og_url(@conn)}"}
+
     %meta(name="google-site-verification" content="TY-DmtIL7_4UM5nAjoOUFUjKXl6w_IAWlijEhvyxQ0Y")
     %meta(name="specificfeeds-verification-code" content="s8YYMqgHmpfPBKVlHTsC")
+
     %title Cenatus
+
     %link(href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet")
     %link(rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css")
     %link(rel="stylesheet" href='#{Routes.static_path(@conn, "/css/app.css")}')
