--- a/lib/cenatus_ltd_web/templates/layout/app.html.haml
+++ b/lib/cenatus_ltd_web/templates/layout/app.html.haml
@@ -8,11 +8,11 @@
     %meta(name="author" content="")
     %meta(name="Keywords" content="Netaudio, New Music Plus, Serpentine Gallery, conference, digital, evaluation, event, festival, infrasonics, installation, interactive, internship, record label, technology, online media, people, production, sharing, sound design, web design, hackney, matt spendlove, andi studer")
 
-    %meta{:name => "twitter:card" content: "summary"}
-    %meta{:property => "og:title" content: "#{og_title(@conn)}"}
-    %meta{:property => "og:description" content: "#{og_description(@conn)}"}
-    %meta{:property => "og:image", content: "#{og_image(@conn)}"}
-    %meta{:property => "og:url", content: "#{og_url(@conn)}"}
+    %meta{name: "twitter:card" content: "summary"}
+    %meta{property: "og:title" content: "#{og_title(@conn)}"}
+    %meta{property: "og:description" content: "#{og_description(@conn)}"}
+    %meta{property: "og:image" content: "#{og_image(@conn)}"}
+    %meta{property: "og:url" content: "#{og_url(@conn)}"}
 
     %meta(name="google-site-verification" content="TY-DmtIL7_4UM5nAjoOUFUjKXl6w_IAWlijEhvyxQ0Y")
     %meta(name="specificfeeds-verification-code" content="s8YYMqgHmpfPBKVlHTsC")
