Fix up embedded images

--- a/lib/cenatus_ltd_web/templates/article/show.html.haml
+++ b/lib/cenatus_ltd_web/templates/article/show.html.haml
@@ -1,7 +1,7 @@
 .row.mt-4
   .col-md-6
     %article.show
-      %image{data-src='#{@article.image_url}' class='cld-responsive'}
+      %image{data-src='#{@article.image_url}' class='cld-responsive header'}
   .col-md-6.related
     - if length(@related) > 0 do
       %h3.lp related articles
